[gd_scene load_steps=30 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Tutorial.gd" type="Script" id=2]
[ext_resource path="res://assets/menus/headline.png" type="Texture" id=3]
[ext_resource path="res://assets/elements/dialogo-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://assets/elements/symbole-fleche-droite-violet - Copia.png" type="Texture" id=5]
[ext_resource path="res://assets/cells/cell.png" type="Texture" id=6]
[ext_resource path="res://assets/elements/symbole-fleche-droite-violet.png" type="Texture" id=7]
[ext_resource path="res://assets/audios/typingsound.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/fonts/RemindSans-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/elements/keyboard.png" type="Texture" id=10]
[ext_resource path="res://assets/cells/bad_molecule.png" type="Texture" id=11]
[ext_resource path="res://assets/pop-up-tutorial.png" type="Texture" id=12]
[ext_resource path="res://assets/elements/right-click.png" type="Texture" id=13]
[ext_resource path="res://assets/cells/cancer_cell.png" type="Texture" id=14]
[ext_resource path="res://assets/elements/20220401_113557.png" type="Texture" id=16]
[ext_resource path="res://assets/habitIcons/store_icon.png" type="Texture" id=17]
[ext_resource path="res://assets/body/female_body.png" type="Texture" id=18]
[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://assets/body/male_body.png" type="Texture" id=20]
[ext_resource path="res://assets/bottom-bar-tutorial.png" type="Texture" id=21]
[ext_resource path="res://Age.gd" type="Script" id=24]
[ext_resource path="res://DeathBarTutorial.gd" type="Script" id=25]

[sub_resource type="DynamicFont" id=2]
size = 12

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 19 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.290196, 0.341176, 0.658824, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.109804, 0.0823529, 0.341176, 1 )

[node name="Tutorial" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="Control"]
margin_left = -15.0
margin_top = -13.0
margin_right = 1045.0
margin_bottom = 616.0
color = Color( 0.0117647, 0.027451, 0.2, 0.729412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="Sprite" parent="Control"]
position = Vector2( 518, 318 )
scale = Vector2( 1.74154, 1.54688 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Control/Box"]
margin_left = -236.0
margin_top = -116.0
margin_right = 208.0
margin_bottom = 37.0
theme = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
autowrap = true

[node name="ButtonNext" type="Button" parent="Control/Box"]
margin_left = 194.0
margin_top = 45.0
margin_right = 264.0
margin_bottom = 115.0
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="ButtonBack" type="Button" parent="Control/Box"]
visible = false
margin_left = 135.0
margin_top = 45.0
margin_right = 205.0
margin_bottom = 115.0
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="Celinha" type="Sprite" parent="Control"]
position = Vector2( 122.687, 468.25 )
scale = Vector2( 0.344689, 0.333022 )
texture = ExtResource( 6 )

[node name="HeadlineBackground" type="ColorRect" parent="Control"]
visible = false
margin_left = 59.0
margin_top = 18.0
margin_right = 552.0
margin_bottom = 152.0

[node name="Headline" type="Sprite" parent="Control/HeadlineBackground"]
position = Vector2( 246, 71 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="FemaleBody" type="Sprite" parent="Control"]
visible = false
position = Vector2( 667.839, 439.5 )
scale = Vector2( 0.983469, 0.977299 )
texture = ExtResource( 18 )

[node name="MaleBody" type="Sprite" parent="Control"]
visible = false
position = Vector2( 878.5, 412 )
scale = Vector2( 1.89, 1.732 )
texture = ExtResource( 20 )

[node name="BottomBar" type="Sprite" parent="Control"]
visible = false
position = Vector2( 415.5, 529 )
scale = Vector2( 1.03875, 1.0303 )
texture = ExtResource( 21 )

[node name="Background" type="ColorRect" parent="Control/BottomBar"]
margin_left = 226.0
margin_top = -28.0
margin_right = 354.0
margin_bottom = 12.0
color = Color( 0.168627, 0.105882, 0.32549, 1 )

[node name="Age" type="Label" parent="Control/BottomBar"]
margin_left = 95.0
margin_top = -51.0
margin_right = 222.0
margin_bottom = 3.0
rect_scale = Vector2( 2, 1 )
theme = SubResource( 5 )
text = "vvhghv"
align = 2
valign = 2
script = ExtResource( 24 )

[node name="Timer" type="Timer" parent="Control/BottomBar"]

[node name="DeathBar" type="ProgressBar" parent="Control"]
visible = false
margin_left = 360.0
margin_top = 320.0
margin_right = 672.0
margin_bottom = 392.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 100.0
script = ExtResource( 25 )

[node name="Timer" type="Timer" parent="Control/DeathBar"]
wait_time = 0.01

[node name="Mouse" type="Sprite" parent="Control"]
visible = false
position = Vector2( 610, 430 )
scale = Vector2( 1.82422, 1.66797 )
texture = ExtResource( 13 )

[node name="BadMolecule" type="Sprite" parent="Control"]
visible = false
position = Vector2( 467, 426 )
scale = Vector2( 0.292938, 0.273764 )
texture = ExtResource( 11 )

[node name="Enemy" type="Sprite" parent="Control"]
visible = false
position = Vector2( 389, 428 )
scale = Vector2( 0.228, 0.223 )
texture = ExtResource( 14 )

[node name="Keys" type="Sprite" parent="Control"]
visible = false
self_modulate = Color( 0.501961, 0.372549, 0.780392, 1 )
position = Vector2( 550.75, 431.75 )
scale = Vector2( 0.270508, 0.264648 )
texture = ExtResource( 10 )

[node name="Shift" type="Sprite" parent="Control"]
visible = false
self_modulate = Color( 0.501961, 0.372549, 0.780392, 1 )
position = Vector2( 689, 430 )
scale = Vector2( 0.409759, 0.403 )
texture = ExtResource( 16 )

[node name="HabitStore" type="Sprite" parent="Control"]
visible = false
position = Vector2( 521, 383 )
scale = Vector2( 1.2675, 1.255 )
texture = ExtResource( 17 )

[node name="PopUp" type="Sprite" parent="Control"]
visible = false
position = Vector2( 323, 364 )
scale = Vector2( 0.829048, 0.797369 )
texture = ExtResource( 12 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 8 )

[connection signal="backPressed" from="." to="Control" method="_on_Tutorial_backPressed"]
[connection signal="nextPressed" from="." to="Control" method="_on_Tutorial_nextPressed"]
[connection signal="buttonPressed" from="Control" to="Control" method="_on_Control_buttonPressed"]
[connection signal="pressed" from="Control/Box/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="Control/Box/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="timeout" from="Control/BottomBar/Timer" to="Control/BottomBar/Age" method="_on_Timer_timeout"]
[connection signal="timeout" from="Control/DeathBar/Timer" to="Control/DeathBar" method="_on_Timer_timeout"]
